# frameforge-media

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/frameforge-cli/: Cargo.toml
crates/frameforge-cli/src/: args.rs  catalog.rs  command.rs  main.rs
crates/frameforge-cli/tests/: cli_contract.rs
crates/frameforge-codecs/: Cargo.toml
crates/frameforge-codecs/src/: bitstream.rs  instrumentation.rs  lib.rs  picture.rs  trace.rs
crates/frameforge-codecs/src/av2/: black_residual.rs  block_layout.rs  cdfs.rs  contexts.rs  decision.rs  directional.rs  entropy.rs  ibc.rs  intra_prediction.rs  lossless_subsampled.rs  lossy420.rs  luma_mode_syntax.rs  mod.rs  motion.rs  palette.rs  palette_444.rs  palette_build.rs  palette_modes.rs  palette_prediction.rs  palette_score.rs  palette_syntax.rs  partitions.rs  planar.rs  residual.rs  sb_bits.rs  syntax.rs  tile.rs  tile_payload.rs  txb.rs
crates/frameforge-codecs/src/vvc/: header.rs  ibc.rs  mod.rs  nal.rs  palette.rs  residual.rs  syntax.rs  tests.rs
crates/frameforge-codecs/src/vvc/cabac/: context.rs  ctu_body.rs  ctu_split.rs  mod.rs  writer.rs
crates/frameforge-codecs/src/vvc/residual/: prediction.rs  quant.rs  recon.rs  syntax.rs  tests.rs  transform.rs
crates/frameforge-core/: Cargo.toml
crates/frameforge-core/src/: error.rs  frame.rs  lib.rs  packet.rs  pipeline.rs
docs/: architecture.md  av2-comparative-instrumentation.md  av2-lossy-baseline.md  av2-predictive-baseline.md  av2-predictive-motion-report.md  compiler-optimizations.md  raw-input-formats.md  validation.md
scripts/: benchmark_encode_matrix.py  capture_wayland_portal_rgb.py  compare_reference_compression.py  convert_rgb24_to_gbrp8.py  generate_predictive_sweep.py  generate_test_vectors.py  reference_tools.py  run_validation_set.py  summarize_encoder_instrumentation.py
tools/: avm-sb-bits.patch  libaom-sb-bits.patch
verification/reference_codecs/: av2.json  libaom.json  rav1e.json  vvc.json
verification/test_vector_sets/: README.md  high-depth-smoke.csv  pipeline-smoke.csv  regression.csv  smoke.csv
