[workspace]
resolver = "2"
members = [
  "crates/frameforge-core",
  "crates/frameforge-codecs",
  "crates/frameforge-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/gabrieldiego/frameforge-media"

[workspace.lints.rust]
unsafe_code = "forbid"
