[package]
name = "frameforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for FrameForge."

[[bin]]
name = "ff"
path = "src/main.rs"

[dependencies]
frameforge-core = { path = "../frameforge-core" }
frameforge-codecs = { path = "../frameforge-codecs", optional = true }

[features]
default = []
codec-av2 = ["dep:frameforge-codecs", "frameforge-codecs/av2"]
codec-vvc = ["dep:frameforge-codecs", "frameforge-codecs/vvc"]
filter-identity = []
filter-crop = []
filter-scale = []

[lints]
workspace = true
