[package]
name = "frameforge-codecs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Experimental codec models for FrameForge."

[dependencies]
frameforge-core = { path = "../frameforge-core" }

[features]
default = []
av2 = []
av2-sb-bit-profile = ["av2"]
vvc = []

[lints]
workspace = true
